...
                    },
                    shape = RoundedCornerShape(6.dp),
                    modifier = Modifier
                        .width(200.dp),
                    content = {
                        Text(
                            text = "Choose photo",
                            color = Color.White
                        )
                    },
                    colors = ButtonDefaults.buttonColors(backgroundColor = ButtonBrown)
                )

                Spacer(Modifier.height(20.dp))

                InputTextField(label = "Change name", name = name)
                InputTextField(label = "Change description", name = description)
                InputTextField(label = "Change location", name = location)
                InputTextField(label = "Change website address", name = websiteLink)

                Spacer(Modifier.height(20.dp))

                Button(
                    onClick = {},
                    shape = RoundedCornerShape(6.dp),
                    modifier = Modifier
                        .width(200.dp),
                    content = {
                        Text(
                            text = "Menu",
                            color = Color.White
                        )
                    },
                    colors = ButtonDefaults.buttonColors(backgroundColor = ButtonBrown)
                )

...
                        },
                        shape = RoundedCornerShape(6.dp),
                        modifier = Modifier
                            .width(200.dp),
                        content = {
                            Text(
                                text = "Save",
                                color = Color.White,
                            )
                        },
                        colors = ButtonDefaults.buttonColors(backgroundColor = ButtonBrown)
                    )
                }
...
